--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 I consent to data collection, including my IP address, for this simulation.
             </label>
             
-            <button type="submit">Join Now</button>
+            <button type="submit">Submit</button>
         </form>
         <div id="response-message"></div>
     </div>
